--- a/pms.app/Components/Layout/NavMenu.razor
+++ b/pms.app/Components/Layout/NavMenu.razor
@@ -39,7 +39,7 @@
                 </div>
 
                 <div class="nav-item px-3">
-                    <NavLink class="nav-link" href="customer-items">
+                    <NavLink class="nav-link" href="customeritems">
                         <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Customer Items
                     </NavLink>
                 </div>
