--- a/pms.app/Components/Pages/CustomerItemPages/Edit.razor
+++ b/pms.app/Components/Pages/CustomerItemPages/Edit.razor
@@ -1,14 +1,22 @@
 ﻿@page "/CustomerItems/edit"
-@inject pms.app.Data.ApplicationDbContext DB
-@using pms.app.Models
-@inject NavigationManager NavigationManager
 @using Microsoft.EntityFrameworkCore
+@using Microsoft.AspNetCore.Authorization
+@using pms.app.Models
+@using Microsoft.AspNetCore.Antiforgery
+@using System.Linq.Expressions;
+@using pms.app.Enums;
+@rendermode InteractiveServer
+
+@inject UnitOfWork.IUnitOfWork unitOfWork
+@inject NavigationManager NavigationManager
+@attribute [Authorize]
+
 
 <PageTitle>Edit</PageTitle>
 
 <h1>Edit</h1>
 
-<h4>CustomerItem</h4>
+<h4>Customer Item</h4>
 <hr />
 @if (CustomerItem is null)
 {
@@ -18,30 +26,19 @@ else
 {
     <div class="row">
         <div class="col-md-4">
+            <p>Customer: @CustomerItem.Customer.Name</p>
+            <p>Item: @CustomerItem.Item.Name</p>
             <EditForm method="post" Model="CustomerItem" OnValidSubmit="UpdateCustomerItem" FormName="edit" Enhance>
                 <DataAnnotationsValidator />
-                <ValidationSummary />
                 <input type="hidden" name="CustomerItem.Id" value="@CustomerItem.Id" />
+                <ValidationSummary />
+
                 <div class="mb-3">
-                    <label for="customerid" class="form-label">CustomerId:</label>
-                    <InputNumber id="customerid" @bind-Value="CustomerItem.CustomerId" class="form-control" />
-                    <ValidationMessage For="() => CustomerItem.CustomerId" class="text-danger" />
-                </div>
-                <div class="mb-3">
-                    <label for="quantity" class="form-label">Quantity:</label>
-                    <InputNumber id="quantity" @bind-Value="CustomerItem.Quantity" class="form-control" />
+                    <label for="quantity" class="form-label">Quantity</label>
+                    <InputNumber id="quantity" @bind-Value="@CustomerItem.Quantity" class="form-control" />
                     <ValidationMessage For="() => CustomerItem.Quantity" class="text-danger" />
                 </div>
-                <div class="mb-3">
-                    <label for="itemid" class="form-label">ItemId:</label>
-                    <InputNumber id="itemid" @bind-Value="CustomerItem.ItemId" class="form-control" />
-                    <ValidationMessage For="() => CustomerItem.ItemId" class="text-danger" />
-                </div>
-                <div class="mb-3">
-                    <label for="assigneddate" class="form-label">AssignedDate:</label>
-                    <InputDate id="assigneddate" @bind-Value="CustomerItem.AssignedDate" class="form-control" />
-                    <ValidationMessage For="() => CustomerItem.AssignedDate" class="text-danger" />
-                </div>
+
                 <button type="submit" class="btn btn-primary">Save</button>
             </EditForm>
         </div>
@@ -56,32 +53,58 @@ else
     [SupplyParameterFromQuery]
     public int Id { get; set; }
 
-    [SupplyParameterFromForm]
     public CustomerItem? CustomerItem { get; set; }
 
     protected override async Task OnInitializedAsync()
     {
-        CustomerItem ??= await DB.CustomerItems.FirstOrDefaultAsync(m => m.Id == Id);
+        // Set up filter
+        Expression<Func<CustomerItem, bool>> filter = i => i.Id == Id;
 
-        if (CustomerItem is null)
+        //Func<IQueryable<CustomerItem>, IOrderedQueryable<CustomerItem>> orderBy = null;
+
+        // Set up includeProperties
+        string includeProperties = "Item,Customer";
+
+        // Set up pagination
+        int page = 1;
+        int pageSize = 100;
+
+        var customerItems = await unitOfWork.GetRepository<CustomerItem>().GetAllAsync(
+            filter,
+            null,
+            includeProperties,
+            page,
+            pageSize
+        );
+
+        // Fetch the CustomerItem from the query parameter
+        CustomerItem ??= customerItems.First();
+
+        if (CustomerItem == null)
         {
             NavigationManager.NavigateTo("notfound");
         }
     }
 
-    // To protect from overposting attacks, enable the specific properties you want to bind to.
-    // For more details, see https://aka.ms/RazorPagesCRUD.
     public async Task UpdateCustomerItem()
     {
-        DB.Attach(CustomerItem!).State = EntityState.Modified;
-
         try
         {
-            await DB.SaveChangesAsync();
+            if (CustomerItem != null)
+            {
+                CustomerItem.Updated = DateTime.Now;
+                // Update the CustomerItem instance with the form values
+                await unitOfWork.GetRepository<CustomerItem>().UpdateAsync(CustomerItem);
+            }
+            else
+            {
+                NavigationManager.NavigateTo("notfound");
+            }
         }
         catch (DbUpdateConcurrencyException)
         {
-            if (!CustomerItemExists(CustomerItem!.Id))
+            var customerItemExists = await CustomerItemExists(Id);
+            if (!customerItemExists)
             {
                 NavigationManager.NavigateTo("notfound");
             }
@@ -94,8 +117,10 @@ else
         NavigationManager.NavigateTo("/customeritems");
     }
 
-    bool CustomerItemExists(int id)
+    private async Task<bool> CustomerItemExists(int id)
     {
-        return DB.CustomerItems.Any(e => e.Id == id);
+        var customerItem = await unitOfWork.GetRepository<CustomerItem>().GetByIdAsync(id);
+
+        return customerItem != null;
     }
 }
