--- a/pms.app/Components/Pages/CustomerItemPages/Index.razor
+++ b/pms.app/Components/Pages/CustomerItemPages/Index.razor
@@ -25,7 +25,7 @@
             <th>Description</th>
             <th>Price</th>
             <th>Status</th>
-            <th>Category</th>           
+            <th>Category</th>
             <th>Created</th>
             <th>Update</th>
         </tr>
@@ -40,7 +40,7 @@
                 <td>@ci.Item.Description</td>
                 <td>@ci.Item.Price</td>
                 <td>@ci.Item.Status</td>
-                <td>@ci.Item.Category?.Name</td>             
+                <td>@ci.Item.Category?.Name</td>
                 <td>@ci.Item.Created</td>
                 <td>@ci.Item.Updated</td>
                 <td>
@@ -53,22 +53,19 @@
     </tbody>
 </table>
 
-    @code {
+@code {
     List<CustomerItem> CustomerItems { get; set; } = new List<CustomerItem>();
 
     protected override async Task OnInitializedAsync()
     {
-        // Set up filter
-        //Expression<Func<CustomerItem, bool>> filter = null;
-
-        Func<IQueryable<CustomerItem>, IOrderedQueryable<CustomerItem>> orderBy = q => q.OrderByDescending(i => i.Customer.Name).ThenByDescending(i => i.AssignedDate);
+        Func<IQueryable<CustomerItem>, IOrderedQueryable<CustomerItem>> orderBy = q => q.OrderByDescending(i => i.Customer.Name).ThenByDescending(i => i.AssignedDate).ThenByDescending(i => i.Updated);
 
         // Set up includeProperties
         string includeProperties = "Item,Item.Category,Customer";
 
         // Set up pagination
         int page = 1;
-        int pageSize = 30;
+        int pageSize = 100;
 
         CustomerItems = await unitOfWork.GetRepository<CustomerItem>().GetAllAsync(
             null,
