--- a/pms.app/Components/Pages/CustomerItemPages/Delete.razor
+++ b/pms.app/Components/Pages/CustomerItemPages/Delete.razor
@@ -1,8 +1,13 @@
 ﻿@page "/customeritems/delete"
-@inject pms.app.Data.ApplicationDbContext DB
-@using pms.app.Models
-@inject NavigationManager NavigationManager
 @using Microsoft.EntityFrameworkCore
+@using Microsoft.AspNetCore.Authorization
+@using pms.app.Models
+@using Microsoft.AspNetCore.Antiforgery
+@using System.Linq.Expressions;
+
+@inject UnitOfWork.IUnitOfWork unitOfWork
+@inject NavigationManager NavigationManager
+@attribute [Authorize]
 
 <PageTitle>Delete</PageTitle>
 
@@ -10,27 +15,28 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>CustomerItem</h4>
+    <h4>Customer Item</h4>
     <hr />
     @if (customeritem is null)
     {
         <p><em>Loading...</em></p>
     }
-    else {
+    else
+    {
         <dl class="row">
-            <dt class="col-sm-2">CustomerId</dt>
-            <dd class="col-sm-10">@customeritem.CustomerId</dd>
+            <dt class="col-sm-2">Customer Name</dt>
+            <dd class="col-sm-10">@customeritem.Customer.Name</dd>
+        </dl>
+        <dl class="row">
+            <dt class="col-sm-2">Item Name</dt>
+            <dd class="col-sm-10">@customeritem.Item.Name</dd>
         </dl>
         <dl class="row">
             <dt class="col-sm-2">Quantity</dt>
             <dd class="col-sm-10">@customeritem.Quantity</dd>
         </dl>
         <dl class="row">
-            <dt class="col-sm-2">ItemId</dt>
-            <dd class="col-sm-10">@customeritem.ItemId</dd>
-        </dl>
-        <dl class="row">
-            <dt class="col-sm-2">AssignedDate</dt>
+            <dt class="col-sm-2">Assigned Date</dt>
             <dd class="col-sm-10">@customeritem.AssignedDate</dd>
         </dl>
         <EditForm method="post" Model="customeritem" OnValidSubmit="DeleteCustomerItem" FormName="delete" Enhance>
@@ -48,7 +54,26 @@
 
     protected override async Task OnInitializedAsync()
     {
-        customeritem = await DB.CustomerItems.FirstOrDefaultAsync(m => m.Id == Id);
+        // Set up filter
+        Expression<Func<CustomerItem, bool>> filter = i => i.Id == Id;
+
+        // Set up includeProperties
+        string includeProperties = "Item,Customer";
+
+        // Set up pagination
+        int page = 1;
+        int pageSize = 1;
+
+        var customerItems = await unitOfWork.GetRepository<CustomerItem>().GetAllAsync(
+            filter,
+            null,
+            includeProperties,
+            page,
+            pageSize
+        );
+
+
+        customeritem = customerItems.First();
 
         if (customeritem is null)
         {
@@ -58,8 +83,10 @@
 
     public async Task DeleteCustomerItem()
     {
-        DB.CustomerItems.Remove(customeritem!);
-        await DB.SaveChangesAsync();
+        if (customeritem != null)
+        {
+            await unitOfWork.GetRepository<CustomerItem>().DeleteAsync(Id);
+        }
         NavigationManager.NavigateTo("/customeritems");
     }
 }
