--- a/pms.app/Components/Layout/NavMenu.razor
+++ b/pms.app/Components/Layout/NavMenu.razor
@@ -45,7 +45,7 @@
                 </div>
 
                 <div class="nav-item px-3">
-                    <NavLink class="nav-link" href="counter">
+                    <NavLink class="nav-link" href="reports">
                         <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Reports
                     </NavLink>
                 </div>
