--- a/pms.app/Components/Pages/CategoryPages/Create.razor
+++ b/pms.app/Components/Pages/CategoryPages/Create.razor
@@ -10,33 +10,37 @@
 
 <PageTitle>Create</PageTitle>
 
-<h1>Create</h1>
+<div class="card">
+    <div class="card-header text-white bg-primary">
+        <h4>Create Category</h4>
+    </div>
+    <div class="card-body">
+        <div class="row">
+            <div class="col-md-6">
+                <EditForm method="post" Model="Category" OnValidSubmit="AddCategory" FormName="create">
+                    <DataAnnotationsValidator />
+                    <input type="hidden" name="Category.Id" value="@Category.Id" />
+                    <div class="mb-3">
+                        <label for="name" class="form-label">Name:</label>
+                        <InputText id="name" @bind-Value="Category.Name" class="form-control" />
+                        <ValidationMessage For="() => Category.Name" class="text-danger" />
+                    </div>
+                    <div class="mb-3">
+                        <label for="description" class="form-label">Description:</label>
+                        <InputTextArea rows="4" id="description" @bind-Value="Category.Description" class="form-control" />
+                        <ValidationMessage For="() => Category.Description" class="text-danger" />
+                    </div>
 
-<h4>Category</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <EditForm method="post" Model="Category" OnValidSubmit="AddCategory" FormName="create">
-            <DataAnnotationsValidator />
-            <input type="hidden" name="Category.Id" value="@Category.Id" />
-            <div class="mb-3">
-                <label for="name" class="form-label">Name:</label>
-                <InputText id="name" @bind-Value="Category.Name" class="form-control" />
-                <ValidationMessage For="() => Category.Name" class="text-danger" />
+                    <div class="mt-3">
+                        <button type="submit" class="btn btn-primary">Create</button>
+                        <a href="/categories" class="btn btn-secondary">Back to List</a>
+                    </div>
+                </EditForm>
             </div>
-            <div class="mb-3">
-                <label for="description" class="form-label">Description:</label>
-                <InputTextArea rows="4" id="description" @bind-Value="Category.Description" class="form-control" />
-                <ValidationMessage For="() => Category.Description" class="text-danger" />
-            </div>
-            <button type="submit" class="btn btn-primary">Create</button>
-        </EditForm>
+        </div>
     </div>
 </div>
 
-<div>
-    <a href="/categories">Back to List</a>
-</div>
 
 @code {
     [SupplyParameterFromForm]
