--- a/pms.app/Components/Pages/CategoryPages/Delete.razor
+++ b/pms.app/Components/Pages/CategoryPages/Delete.razor
@@ -11,39 +11,49 @@
 
 <PageTitle>Delete</PageTitle>
 
-<h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Category</h4>
-    <hr />
-    @if (category is null)
-    {
-        <p><em>Loading...</em></p>
-    }
-    else {
-        <dl class="row">
-            <dt class="col-sm-2">Name</dt>
-            <dd class="col-sm-10">@category.Name</dd>
-        </dl>
-        <dl class="row">
-            <dt class="col-sm-2">Description</dt>
-            <dd class="col-sm-10">@category.Description</dd>
-        </dl>
-        <dl class="row">
-            <dt class="col-sm-2">Created</dt>
-            <dd class="col-sm-10">@category.Created</dd>
-        </dl>
-        <dl class="row">
-            <dt class="col-sm-2">Updated</dt>
-            <dd class="col-sm-10">@category.Updated</dd>
-        </dl>
-        <EditForm method="post" Model="category" OnValidSubmit="DeleteCategory" FormName="delete" Enhance>
-            <button type="submit" class="btn btn-danger" disabled="@(category is null)">Delete</button> |
-            <a href="/categories">Back to List</a>
-        </EditForm>
-    }
+<div class="card">
+
+    <div class="card-header text-white bg-primary">
+        <h4>Delete Category</h4>
+    </div>
+
+    <div class="card-body">
+        <div class="row">
+            <div class="col-md-12">
+                @if (category is null)
+                {
+                    <p><em>Loading...</em></p>
+                }
+                else
+                {
+                    <dl class="row">
+                        <dt class="col-sm-2">Name:</dt>
+                        <dd class="col-sm-10">@category.Name</dd>
+                    </dl>
+                    <dl class="row">
+                        <dt class="col-sm-2">Description:</dt>
+                        <dd class="col-sm-10">@category.Description</dd>
+                    </dl>
+                    <dl class="row">
+                        <dt class="col-sm-2">Created:</dt>
+                        <dd class="col-sm-10">@category.Created</dd>
+                    </dl>
+                    <dl class="row">
+                        <dt class="col-sm-2">Updated:</dt>
+                        <dd class="col-sm-10">@category.Updated</dd>
+                    </dl>
+                    <EditForm method="post" Model="category" OnValidSubmit="DeleteCategory" FormName="delete" Enhance>
+                        <button type="submit" class="btn btn-danger" disabled="@(category is null)">Delete</button>
+                        <a href="/categories" class="btn btn-secondary">Back to List</a>
+                    </EditForm>
+                }
+            </div>
+        </div>
+    </div>
 </div>
+
+
 
 @code {
     Category? category;
