--- a/pms.app/Components/Pages/CategoryPages/Index.razor
+++ b/pms.app/Components/Pages/CategoryPages/Index.razor
@@ -10,39 +10,51 @@
 
 <PageTitle>Categories</PageTitle>
 
-<h1>Categories</h1>
 
-<p>
-    <a href="categories/create">Add Category</a>
-</p>
+<div class="card">
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>Name</th>
-            <th>Description</th>
-            <th>Created</th>
-            <th>Updated</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var category in Categories)
-        {
-            <tr>
-                <td>@category.Name</td>
-                <td>@category.Description</td>
-                <td>@category.Created</td>
-                <td>@category.Updated</td>
-                <td>
-                    <a href="@($"categories/edit?id={category.Id}")">Edit</a> |
-                    <a href="@($"categories/details?id={category.Id}")">Details</a> |
-                    <a href="@($"categories/delete?id={category.Id}")">Delete</a>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
+    <div class="card-header text-white bg-primary">
+        <h4>Categories</h4>
+    </div>
+    <div class="card-body">
+        <div class="row">
+            <div class="col-md-12"></div>
+            <p>
+                <a href="categories/create" class="btn btn-primary">Add Category</a>
+            </p>
 
+            <table class="table pmsTable">
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Description</th>
+                        <th>Created</th>
+                        <th>Updated</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var category in Categories)
+                    {
+                        <tr>
+                            <td>@category.Name</td>
+                            <td>@category.Description</td>
+                            <td>@category.Created</td>
+                            <td>@category.Updated</td>
+                            <td>
+                                <a href="@($"categories/edit?id={category.Id}")" class="btn btn-sm btn-warning">Edit</a>
+                                <a href="@($"categories/details?id={category.Id}")" class="btn btn-sm btn-info">Details</a>
+                                <a href="@($"categories/delete?id={category.Id}")" class="btn btn-sm btn-danger">Delete</a>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+
+        </div>
+
+    </div>
+
+</div>
 
 @code {
     List<Category> Categories { get; set; } = new List<Category>();
